test/scc/stmt/semantic-errors/022.a
022.t:3:10: error: declaration of 'static' variable 'a' in 'for' loop initial declaration